Fixed a glitched which resulted in a scrollbar showing on the second line on webkit.

--- a/frontend/assets/styles/landing.css
+++ b/frontend/assets/styles/landing.css
@@ -143,6 +143,7 @@ div#slide2 {
   font-weight: thin;
   padding-top: 7rem;
   padding-bottom: 4rem;
+  overflow-x: hidden;
 }
 
 div#slide2 > div{
